fixed padding left/right for disclaimer on mobile

--- a/_scss/_futbolismo.scss
+++ b/_scss/_futbolismo.scss
@@ -533,7 +533,7 @@ html:not(.page) .post .post-body p:first-child:first-letter {
 	font-size: 1em;
 	font-style: italic;
 	color: #666;
-	padding: 0 1em;
+	padding: 0;
 }
 .post .comments {
 	margin-top:2rem;
